Tab overflow issue (#15)
* Fix tab overflow issues

* Update rfui.css

--- a/src/rfui.css
+++ b/src/rfui.css
@@ -765,6 +765,9 @@
   .overflow-x-hidden {
     overflow-x: hidden;
   }
+  .overflow-x-scroll {
+    overflow-x: scroll;
+  }
   .rounded {
     border-radius: 0.25rem;
   }
